# dbcop

./: .gitignore  AGENTS.md  Cargo.toml  README.md  codecov.yml  deno.json  playwright.config.ts  typos.toml  vitest.config.ts
.github/: typos.toml  zizmor.yml
.github/workflows/: code-quality.yaml  code-quality.yml  coverage.yaml  deno.yaml  pages.yaml  rust.yaml  rust.yml
.husky/: pre-commit
.sisyphus/drafts/: sat-encoding.md
.sisyphus/evidence/: t4-baseline.txt
.sisyphus/plans/: dbcop-refactor.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/benches/: consistency.rs
crates/core/src/: lib.rs
crates/core/src/consistency/: decomposition.rs  error.rs  mod.rs  witness.rs
crates/core/src/consistency/linearization/: constrained_linearization.rs  prefix.rs  serializable.rs  snapshot_isolation.rs
crates/core/src/consistency/saturation/: atomic_read.rs  causal.rs  committed_read.rs  repeatable_read.rs
crates/core/src/graph/: digraph.rs  ugraph.rs
crates/core/src/history/atomic/: mod.rs  types.rs
crates/core/src/history/raw/: display.rs  error.rs  lexer.rs  mod.rs  parser.rs  types.rs
crates/core/tests/: consistency.rs  consistency_hierarchy.rs  decomposition_check.rs  paper_causal_prefix.rs  paper_np_complete.rs  paper_polynomial.rs  version_zero.rs
crates/core/tests/common/: mod.rs
crates/drivers/: Cargo.toml
crates/drivers/src/: cockroachdb.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lexer.rs  lib.rs  parser.rs
crates/sat/: Cargo.toml
crates/sat/benches/: npc_vs_sat.rs
crates/sat/src/: lib.rs
crates/sat/tests/: cross_check.rs
crates/testgen/: Cargo.toml
crates/testgen/src/: generator.rs  lib.rs
crates/testgen/tests/: consistency.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: wasm.test.ts
dbcop-egui/: Cargo.toml
dbcop-egui/src/: lib.rs
dbcop_cli/: Cargo.toml  README.md
dbcop_cli/src/: lib.rs  main.rs
dbcop_core/: Cargo.toml
dbcop_core/benches/: consistency.rs
dbcop_core/src/: lib.rs
dbcop_core/src/consistency/: mod.rs
dbcop_core/src/consistency/linearization/: constrained_linearization.rs  mod.rs  prefix.rs  serializable.rs  snapshot_isolation.rs
dbcop_core/src/consistency/saturation/: atomic_read.rs  causal.rs  committed_read.rs  mod.rs  repeatable_read.rs
dbcop_core/src/graph/: biconnected_component.rs  digraph.rs  mod.rs
dbcop_core/src/history/: mod.rs
dbcop_core/src/history/atomic/: mod.rs  types.rs
dbcop_core/src/history/non_atomic/: error.rs  mod.rs  types.rs
dbcop_core/src/solver/: atomic_read.rs  causal.rs  committed_read.rs  constrained_linearization.rs  error.rs  mod.rs  repeatable_read.rs  serializable.rs  snapshot_isolation.rs
dbcop_core/src/solver/linearization/: prefix.rs
dbcop_core/src/solver/saturation/: atomic_read.rs  committed_read.rs
dbcop_core/tests/: consistency.rs  paper_causal_prefix.rs  paper_polynomial.rs
dbcop_core/tests/common/: mod.rs
dbcop_drivers/src/: antidotedb.rs  galera.rs
dbcop_sat/: Cargo.toml
dbcop_sat/src/: lib.rs
dbcop_sat/tests/: cross_check.rs
dbcop_testgen/: Cargo.toml
dbcop_testgen/src/: generator.rs  lib.rs
dbcop_testgen/src/driver/: mod.rs
dbcop_wasm/: Cargo.toml
dbcop_wasm/src/: lib.rs
docs/: algorithms.md  architecture.md  cli-reference.md  consistency-models.md  development.md  history-format.md  wasm-api.md  web-and-wasm.md
schemas/: history.schema.json  validate.ts
scripts/: check-schema.ts
tests/: wasm.test.ts
web/: app.tsx  build.ts  constants.ts  index.html  main.ts  main.tsx  style.css  theme.css  types.ts  wasm.ts
web/__tests__/: ResultBar.test.tsx  SessionDisplay.test.tsx  ShareLink.test.tsx  ThemeToggle.test.tsx  setup.ts  smoke.test.tsx
web/components/: EditorPanel.tsx  GraphPanel.tsx  ResultBar.tsx  SessionBuilder.tsx  SessionDisplay.tsx  ShortcutHelp.tsx  StepThrough.tsx  ThemeToggle.tsx  Toolbar.tsx
web/e2e/: smoke.spec.ts
web/hooks/: useKeyboardShortcuts.ts  useShareLink.ts  useWasmCheck.ts
