[package]
name                   = "dbcop-egui"
version.workspace      = true
description.workspace  = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
edition.workspace      = true
rust-version.workspace = true
readme.workspace       = true

[dependencies]

[lints]
workspace = true
