[package]
name = "dbcop"
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
dbcop_core = { workspace = true, features = ["serde"] }
dbcop_testgen = { workspace = true }

clap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
