[package]
name                   = "dbcop_cli"
version.workspace      = true
description.workspace  = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
edition.workspace      = true
rust-version.workspace = true
readme                 = "README.md"

[[bin]]
name = "dbcop"
path = "src/main.rs"

[dependencies]
dbcop_core    = { workspace = true, features = [ "serde" ] }
dbcop_parser  = { workspace = true }
dbcop_testgen = { workspace = true }

clap               = { workspace = true }
serde_json         = { workspace = true, features = [ "std" ] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
