[package]
name                   = "dbcop_core"
version.workspace      = true
description.workspace  = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
edition.workspace      = true
rust-version.workspace = true
readme                 = "README.md"

[dependencies]
hashbrown   = { workspace = true }
serde       = { workspace = true, optional = true, features = [ "derive" ] }
tracing     = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
criterion   = { version = "0.8", features = [ "html_reports" ] }
serde_json  = { workspace = true }

[lints]
workspace = true

[features]
default      = [  ]
serde        = [ "dep:serde", "hashbrown/serde" ]
compact-serde = [ "serde" ]

[[bench]]
name    = "consistency"
harness = false
