[package]
name                   = "dbcop_parser"
version.workspace      = true
description.workspace  = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
edition.workspace      = true
rust-version.workspace = true
readme                 = "README.md"

[dependencies]
dbcop_core = { workspace = true }
winnow     = { workspace = true }
logos      = { workspace = true }
serde      = { workspace = true, optional = true, features = [ "derive" ] }

[features]
default = [  ]
serde   = [ "dep:serde", "dbcop_core/serde" ]

[dev-dependencies]
serde_json = { workspace = true, features = [ "std" ] }

[lints]
workspace = true
